[gd_scene load_steps=2 format=3 uid="uid://daxedwsh2yqag"]

[ext_resource type="Script" path="res://UI/gongyitable/gongyi_item.gd" id="1_xv06h"]

[node name="gongyiItem" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xv06h")

[node name="number" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工艺1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="desc" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "工艺描述工艺描述工艺描述工艺描述工艺描述工艺描述工艺描述工艺描述工艺描述"
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="delete" type="Button" parent="Control"]
layout_mode = 2
text = "删除"

[node name="edit" type="Button" parent="Control"]
layout_mode = 2
text = "编辑"

[node name="EditGongyiDialog" type="AcceptDialog" parent="."]
initial_position = 2
title = "编辑工艺"
size = Vector2i(300, 123)

[node name="VBoxContainer" type="VBoxContainer" parent="EditGongyiDialog"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 74.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EditGongyiDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="EditGongyiDialog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工艺名称:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEdit" type="LineEdit" parent="EditGongyiDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入名称"

[node name="HBoxContainer2" type="HBoxContainer" parent="EditGongyiDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Desc" type="Label" parent="EditGongyiDialog/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工艺描述:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescEdit" type="LineEdit" parent="EditGongyiDialog/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入描述内容"

[connection signal="pressed" from="Control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Control/edit" to="." method="_on_edit_pressed"]
[connection signal="confirmed" from="EditGongyiDialog" to="." method="_on_edit_gongyi_dialog_confirmed"]
